Fix: Ensure text remains visible during font load

--- a/assets/css/extended/custom-fonts.css
+++ b/assets/css/extended/custom-fonts.css
@@ -5,9 +5,10 @@
     font-family: 'charterbold_italic';
     src: url('fonts/charter_bold_italic-webfont.eot');
     src: url('fonts/charter_bold_italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/charter_bold_italic-webfont.woff') format('woff');
+        url('fonts/charter_bold_italic-webfont.woff') format('woff');
     font-weight: bold;
     font-style: italic;
+    font-display: swap;
 
 }
 
@@ -15,9 +16,10 @@
     font-family: 'charter';
     src: url('fonts/charter_bold-webfont.eot');
     src: url('fonts/charter_bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/charter_bold-webfont.woff') format('woff');
+        url('fonts/charter_bold-webfont.woff') format('woff');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 
 }
 
@@ -25,9 +27,10 @@
     font-family: 'charter';
     src: url('fonts/charter_italic-webfont.eot');
     src: url('fonts/charter_italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/charter_italic-webfont.woff') format('woff');
+        url('fonts/charter_italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: italic;
+    font-display: swap;
 
 }
 
@@ -35,9 +38,10 @@
     font-family: 'charter';
     src: url('/fonts/charter_regular-webfont.eot');
     src: url('/fonts/charter_regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/charter_regular-webfont.woff') format('woff');
+        url('/fonts/charter_regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 
 }
 
@@ -52,12 +56,12 @@ h6 {
 }
 
 body {
-    font-family: "charter", "Palatino Linotype","Palatino","Book Antiqua","Baskerville","Bookman Old Style","Garamond","Apple Garamond","Century Schoolbook","Georgia", "Times New Roman", serif;
-    font-size: clamp(18px,2vw,20px);
+    font-family: "charter", "Palatino Linotype", "Palatino", "Book Antiqua", "Baskerville", "Bookman Old Style", "Garamond", "Apple Garamond", "Century Schoolbook", "Georgia", "Times New Roman", serif;
+    font-size: clamp(18px, 2vw, 20px);
 }
 
 
 
 .logo a {
-    font-family: "charter", "Palatino Linotype","Palatino","Book Antiqua","Baskerville","Bookman Old Style","Garamond","Apple Garamond","Century Schoolbook","Georgia", "Times New Roman", serif;
+    font-family: "charter", "Palatino Linotype", "Palatino", "Book Antiqua", "Baskerville", "Bookman Old Style", "Garamond", "Apple Garamond", "Century Schoolbook", "Georgia", "Times New Roman", serif;
 }
